<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dev.yonel.wireguardbot</groupId>
	<artifactId>wireguardbot</artifactId>
	<version>0.0.1</version>
	<packaging>pom</packaging>

	<name>wireguardbot</name>
	<description>Bot que se va a encargar de gestionar la configuracion de usuarios de un servidor Wireguard.</description>
	
	<modules>
		<module>common</module>
		<module>core</module>
		<module>agent</module>
		<module>bot</module>
		<module>message-manager</module>
	</modules>

	<properties>
		<java.version>21</java.version>
		<spring-boot.version>3.4.6</spring-boot.version>
		<spring-cloud.version>2024.0.1</spring-cloud.version>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<telegram-bot-api.version>6.9.7.1</telegram-bot-api.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<!-- 
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>-->
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- TELEGRAM -->
			<dependency>
				<groupId>org.telegram</groupId>
				<artifactId>telegrambots-spring-boot-starter</artifactId>
				<version>${telegram-bot-api.version}</version>
			</dependency>

            <!-- OkHttp3 -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>4.1.0</version>
            </dependency>

			<!-- Simmetrics-->
			<dependency>
				<groupId>com.github.mpkorstanje</groupId>
				<artifactId>simmetrics-core</artifactId>
				<version>4.1.1</version>
			</dependency>
			
			<!-- Caffeine Cache -->
			<dependency>
				<groupId>com.github.ben-manes.caffeine</groupId>
				<artifactId>caffeine</artifactId>
				<version>3.1.8</version>
			</dependency>





			<!-- DEPENDENCIAS CON VULNERABILIDADES-->
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>4.5.14</version>
			</dependency>

			<dependency>
				<groupId>com.thoughtworks.xstream</groupId>
				<artifactId>xstream</artifactId>
				<version>1.4.21</version>
			</dependency>

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>33.5.0-jre</version>
			</dependency>

			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>1.6.0</version>
			</dependency>

			<dependency>
				<groupId>org.glassfish.grizzly</groupId>
				<artifactId>grizzly-http</artifactId>
				<version>4.1.0-M1</version>
			</dependency>
			<!-- DEPENDENCIAS CON VULNERABILIDADES -->






			<!-- commons-configuration2 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-configuration2</artifactId>
				<version>2.13.0</version>
			</dependency>

			<!-- Dependencias con Conflictos-->
	

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-test</artifactId>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
